TODOS

2020.10.7

Comment binseg_normal.cpp to explain optimal_cost computation.

2020.9.15

remove unused C++ errors.

test coef method.

2020.9.3

Bugfix for negative means, docs.

predict/plot methods, copy code from example.

2019.9.20

Initial implementation.